<resources>

    <string name="app_name">ShareTribe</string>
    <string name="action_settings">Settings</string>
    <string name="tv_agree">
        \t尊敬的用户，欢迎您注册成为ATM软件的用户。在注册前请您仔细阅读如下服务条款：\n\t
        本服务协议双方为本软件与本软件用户，本服务协议具有合同效力。
        你确认本服务协议后，本服务协议在您和本软件之间产生法律效力。请您务必在注册之前认真阅读全部服务协议内容，如有
        疑问，可向客服咨询
    </string>
    
	<string name="copy_label">&#x00A9;atm</string>
	<string name="username">请输入用户名</string>
	<string name="password">请输入密码</string>
	<string name="error_login">无法登录？</string>
	<string name="register">注册</string>
	<string name="desc">!</string>
	<string name="login_popup_password">忘记密码</string>
	<string name="login_popup_username">找回账号</string>
	<string name="login_popup_exit">取	消</string>
	<string name="forget_password_desc">请输入您的账号或注册邮箱</string>
	<string name="forget_password_pwd">账	户：</string>
	<string name="appeal">申诉</string>
	<string name="submit">确	定</string>
	<string name="find_username_desc">请输入您的注册邮箱</string>
	<string name="find_username_email">邮        箱：</string>
	<string name="head_img">headImg</string>
	<string name="user_name">wo</string>
	<string name="personal_message">personalmessage</string>
	<string name="emjio">表情</string>
	<string name="sendpic">发送图片</string>
	
	<string name="title1">苹果在中国市场：Google的劣势反而是苹果的优势</string>
    <string name="title2">吞噬大数据存储领域新机制——NoSQL模式解析</string>

<string name="share_content">ShareSDK for Android不仅集成简单、支持如QQ好友、微信、新浪微博、腾讯微博等所有社交平台，而且还有强大的统计分析管理后台，实时了解用户、信息流、回流率、传播效应等数据，详情见官网http://sharesdk.cn @ShareSDK</string>
	
	<string name="share">分享</string>
	<string name="not_yet_authorized">尚未授权</string>
		<string name="get_user_info_sw">获取新浪微博授权用户资料</string>
	<string name="get_user_info_tc">获取腾讯微博授权用户资料</string>
	<string name="get_user_info_rr">获取人人网授权用户资料</string>
	<string name="get_user_info_qz">获取QQ空间授权用户资料</string>
	<string name="sinaweibo">新浪微博</string>
	<string name="tencentweibo">腾讯微博</string>
	<string name="renren">人人网</string>
	<string name="qzone">QQ空间</string>	
	<string name="get_my_info">获取授权用户资料</string>
	<string name="get_other_info">获取其他用户资料</string>
	<string name="share_desc">分享到第三方app的imageview描述</string>
	<string name="share_timeline">微信朋友圈</string>
	<string name="share_friend">微信朋友</string>
</resources>
