<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	
	android:orientation="vertical"
	 >
	<include 
        android:layout_width="match_parent"
	    android:layout_height="45dp"
	    layout="@layout/only_back_title"/>
	<!-- 获取焦点，为了让文本框在默认情况下不获得焦点 -->
	<LinearLayout 
	    android:focusable="true" 
	    android:focusableInTouchMode="true"
	     android:layout_width="0px" 
	     android:layout_height="0px"
	     />
	<LinearLayout 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="@color/white"
	android:padding="10dp"
	android:gravity="left"  >

	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>
		<TextView 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			
			android:textSize="16sp"
			android:textColor="@color/black"
			android:text="@string/find_username_email"/>
		<EditText 
			android:id="@+id/edit_find_username"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textSize="16sp"
			android:background="@drawable/edit_text"
			android:hint="@string/find_username_desc"/>
	</LinearLayout>
	<Button 
		android:id="@+id/btn_find_submit"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="10dp"
		android:layout_margin="10dp"
		android:textSize="16sp"
		 
		android:background="@drawable/btn_confirm"
		android:text="@string/submit"/>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:gravity="bottom"
		>
		<TextView 
			android:id="@+id/text_find_appeal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="right"
			android:textColor="@color/blue"
			android:text="@string/appeal"/>
	</LinearLayout>
	</LinearLayout>
	

</LinearLayout>

 


    

